- Recycler view added in fragments - Search view added in search news fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="tab_title_saved_news">Saved News</string>
     <string name="tab_title_search_news">Search News</string>
 
+    <string name="hint_search_news">Search</string>
+
 </resources>
